[gd_scene load_steps=2 format=3 uid="uid://bxk7fnr2rdshm"]

[ext_resource type="Script" uid="uid://dhu31s2miuwb3" path="res://Scenes/menu_screen.gd" id="1_bmx56"]

[node name="menu_screen" type="Node2D"]
script = ExtResource("1_bmx56")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 160.0
color = Color(0.172549, 0.152941, 0.854902, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 160.0

[node name="main_container" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 160.0

[node name="spacer" type="Control" parent="UI/main_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/main_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tower of Secrets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer2" type="Control" parent="UI/main_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="menu_buttons" type="VBoxContainer" parent="UI/main_container"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="new_game" type="Button" parent="UI/main_container/menu_buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "New Game"

[node name="load_game" type="Button" parent="UI/main_container/menu_buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Load Game"

[node name="options" type="Button" parent="UI/main_container/menu_buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Options"

[node name="exit" type="Button" parent="UI/main_container/menu_buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Exit"

[node name="spacer3" type="Control" parent="UI/main_container"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_up" from="UI/main_container/menu_buttons/new_game" to="." method="_on_new_game_button_up"]
[connection signal="button_up" from="UI/main_container/menu_buttons/load_game" to="." method="_on_load_game_button_up"]
[connection signal="button_up" from="UI/main_container/menu_buttons/options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="UI/main_container/menu_buttons/exit" to="." method="_on_exit_button_up"]
